tests/rosetta/transpiler/TypeScript/define-a-primitive-data-type.error
type: error[T003]: unknown function: NewTinyInt
  --> /workspace/mochi/tests/rosetta/x/Mochi/define-a-primitive-data-type.mochi:8:12

  8 |     return NewTinyInt(value + t2.value)
    |            ^

help:
  Ensure the function is defined before it's called.